--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Home page</title>
-  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-  <link rel="stylesheet" href="assets/css/style.css">
-  <meta name="keywords" content="asd, asd">
-  <meta name="description" content="asd, asd">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Outfit&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/media.css">
+  <meta name="keywords" content="asd, asd">
+  <meta name="description" content="asd, asd">
 </head>
 <body>
 
@@ -39,7 +40,7 @@
   <section class="intro">
     <div class="intro__head">
       <p class="intro__suptitle">Чернігівський благодійний фонд</p>
-      <h1 class="intro__title">Паляниця - Україна</h1>
+      <h1 class="intro__title">Паляниця <span>-</span> Україна</h1>
     </div>
     <p class="intro__text"><span>Надаємо допомогу</span> їжею, медикаментами, одягом та засобами особистої гігієни <span>мирному населенню
     Чернігова</span> та області, нашим захисникам та лікарням. Також ми забезпечуємо тих, хто знаходиться в бомбосховищах,
@@ -83,8 +84,9 @@
         </div>
         <div class="work__slider">
           <div class="work-slider slider">
-            <img src="assets/img/work-1.jpg" alt="text">
-            <img src="assets/img/work-2.jpg" alt="text">
+            <div><img src="assets/img/work-1.jpg" alt="text"></div>
+            <div><img src="assets/img/work-2.jpg" alt="text"></div>
+            <div><img src="assets/img/work-1.jpg" alt="text"></div>
           </div>
           <div class="slider-controls">
             <div class="slider-arrow work-slider__prev">
@@ -127,7 +129,8 @@
           <div class="faqs-item__body">
             <div class="faqs-item__field">
               <h4 class="faqs-item__label">Reciever:</h4>
-              <p class="faqs-item__value">VERUHA VIKTORIIA
+              <p class="faqs-item__value">
+                <span>VERUHA VIKTORIIA</span>
                 <span class="faqs-item__copy js-copy" data-value="VERUHA VIKTORIIA">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -142,7 +145,8 @@
             </div>
             <div class="faqs-item__field">
               <h4 class="faqs-item__label">Address of reviever:</h4>
-              <p class="faqs-item__value">14000, Ukraine, reg. Chernihivska, c. Chernihiv, ln. Polietaieva, build. 16A
+              <p class="faqs-item__value">
+                <span>14000, Ukraine, reg. Chernihivska, c. Chernihiv, ln. Polietaieva, build. 16A</span>
                 <span class="faqs-item__copy js-copy" data-value="VERUHA VIKTORIIA">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
@@ -573,8 +577,9 @@
         </div>
         <div class="projects__slider slider">
           <div class="projects-slider">
-            <img src="assets/img/project-1.jpg" alt="text">
-            <img src="assets/img/project-2.jpg" alt="text">
+            <div><img src="assets/img/project-1.jpg" alt="text"></div>
+            <div><img src="assets/img/project-2.jpg" alt="text"></div>
+            <div><img src="assets/img/project-1.jpg" alt="text"></div>
           </div>
           <div class="slider-controls">
             <div class="slider-arrow projects-slider__prev">
