--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 <body>
 
 <header class="header">
+  <div class="header__mobile">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
   <div class="header__wrapper">
     <a href="#" class="logo"><img src="assets/img/logo.svg" alt="title"></a>
     <div class="header__controls">
@@ -41,6 +46,7 @@
     <div class="intro__head">
       <p class="intro__suptitle">Чернігівський благодійний фонд</p>
       <h1 class="intro__title">Паляниця <span>-</span> Україна</h1>
+      <a href="#" class="donate-mobile">Допомогти</a>
     </div>
     <p class="intro__text"><span>Надаємо допомогу</span> їжею, медикаментами, одягом та засобами особистої гігієни <span>мирному населенню
     Чернігова</span> та області, нашим захисникам та лікарням. Також ми забезпечуємо тих, хто знаходиться в бомбосховищах,
