--- a/index.html
+++ b/index.html
@@ -684,6 +684,32 @@
             <a href="#" class="team-item__link">@vika_veruga</a>
           </div>
         </div>
+        <div class="team-item">
+          <div class="team-item__img">
+            <img src="assets/img/c-media.jpg" alt="name">
+          </div>
+          <div class="team-item__text">
+            <h3 class="team-item__name">Костянтин Шабакін</h3>
+            <p class="team-item__position">засновник</p>
+            <a href="#" class="team-item__link">@yamakasi_master</a>
+          </div>
+        </div>
+        <div class="team-item">
+          <div class="team-item__img"></div>
+          <div class="team-item__text">
+            <h3 class="team-item__name">Дмитро Кохан</h3>
+            <p class="team-item__position">founder</p>
+            <a href="#" class="team-item__link">@dmytro.kokhan11</a>
+          </div>
+        </div>
+        <div class="team-item">
+          <div class="team-item__img"></div>
+          <div class="team-item__text">
+            <h3 class="team-item__name">Вікторія Веруга</h3>
+            <p class="team-item__position">директор</p>
+            <a href="#" class="team-item__link">@vika_veruga</a>
+          </div>
+        </div>
       </div>
       <a href="#" class="team__more">Показати всіх</a>
     </div>
