--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
       <h1 class="intro__title">Паляниця <span>-</span> Україна</h1>
       <a href="#" class="donate-mobile">Допомогти</a>
     </div>
-    <p class="intro__text"><span>Надаємо допомогу</span> їжею, медикаментами, одягом та засобами особистої гігієни <span>мирному населенню
-    Чернігова</span> та області, нашим захисникам та лікарням. Також ми забезпечуємо тих, хто знаходиться в бомбосховищах,
+    <p class="intro__text"><span>Надаємо допомогу</span> їжею, медикаментами, одягом та засобами особистої гігієни
+      <span>мирному населенню
+    Чернігова</span> та області, нашим захисникам та лікарням. Також ми забезпечуємо тих, хто знаходиться в
+      бомбосховищах,
       притулки для літніх людей та тварин.</p>
   </section>
 
@@ -467,9 +469,9 @@
           <div class="faqs-item__body">
             <div class="faqs-item-crypto">
               <div class="faqs-item-crypto__item">
-                <img src="assets/img/faq-crypto.png" alt="btc" class="faqs-item-crypto__item-img">
-                <p class="faqs-item__value">BTC
-                  <span class="faqs-item__copy js-copy" data-value="BTC">
+                <img src="assets/img/BNB.png" alt="btc" class="faqs-item-crypto__item-img">
+                <p class="faqs-item__value">BNB
+                  <span class="faqs-item__copy js-copy" data-value="0x3662076b791bc8b86846c32dba4a2c6cd156f7a4">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                       d="M9.74967 3.52075C6.3094 3.52075 3.52051 6.30964 3.52051 9.74992V17.449C3.52051 17.8978 3.88428 18.2615 4.33301 18.2615C4.78174 18.2615 5.14551 17.8978 5.14551 17.449V9.74992C5.14551 7.20711 7.20686 5.14575 9.74967 5.14575H17.3469C17.7957 5.14575 18.1594 4.78198 18.1594 4.33325C18.1594 3.88452 17.7957 3.52075 17.3469 3.52075H9.74967Z"
@@ -482,9 +484,9 @@
                 </p>
               </div>
               <div class="faqs-item-crypto__item">
-                <img src="assets/img/faq-crypto.png" alt="btc" class="faqs-item-crypto__item-img">
+                <img src="assets/img/BTC.png" alt="btc" class="faqs-item-crypto__item-img">
                 <p class="faqs-item__value">BTC
-                  <span class="faqs-item__copy js-copy" data-value="BTC">
+                  <span class="faqs-item__copy js-copy" data-value="1D79uH2ZFeT6v4nhM3xhhbGgD9CtWfbA3h">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                       d="M9.74967 3.52075C6.3094 3.52075 3.52051 6.30964 3.52051 9.74992V17.449C3.52051 17.8978 3.88428 18.2615 4.33301 18.2615C4.78174 18.2615 5.14551 17.8978 5.14551 17.449V9.74992C5.14551 7.20711 7.20686 5.14575 9.74967 5.14575H17.3469C17.7957 5.14575 18.1594 4.78198 18.1594 4.33325C18.1594 3.88452 17.7957 3.52075 17.3469 3.52075H9.74967Z"
@@ -497,9 +499,9 @@
                 </p>
               </div>
               <div class="faqs-item-crypto__item">
-                <img src="assets/img/faq-crypto.png" alt="btc" class="faqs-item-crypto__item-img">
-                <p class="faqs-item__value">BTC
-                  <span class="faqs-item__copy js-copy" data-value="BTC">
+                <img src="assets/img/ETH.png" alt="btc" class="faqs-item-crypto__item-img">
+                <p class="faqs-item__value">ETH
+                  <span class="faqs-item__copy js-copy" data-value="0x3662076b791bc8b86846c32dba4a2c6cd156f7a4">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                       d="M9.74967 3.52075C6.3094 3.52075 3.52051 6.30964 3.52051 9.74992V17.449C3.52051 17.8978 3.88428 18.2615 4.33301 18.2615C4.78174 18.2615 5.14551 17.8978 5.14551 17.449V9.74992C5.14551 7.20711 7.20686 5.14575 9.74967 5.14575H17.3469C17.7957 5.14575 18.1594 4.78198 18.1594 4.33325C18.1594 3.88452 17.7957 3.52075 17.3469 3.52075H9.74967Z"
@@ -512,9 +514,9 @@
                 </p>
               </div>
               <div class="faqs-item-crypto__item">
-                <img src="assets/img/faq-crypto.png" alt="btc" class="faqs-item-crypto__item-img">
-                <p class="faqs-item__value">BTC
-                  <span class="faqs-item__copy js-copy" data-value="BTC">
+                <img src="assets/img/USDT.png" alt="btc" class="faqs-item-crypto__item-img">
+                <p class="faqs-item__value">USDT
+                  <span class="faqs-item__copy js-copy" data-value="TPdNeGUUXgzN4pUiHFUg9LuMMwXr9nfcmx">
                 <svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path
                       d="M9.74967 3.52075C6.3094 3.52075 3.52051 6.30964 3.52051 9.74992V17.449C3.52051 17.8978 3.88428 18.2615 4.33301 18.2615C4.78174 18.2615 5.14551 17.8978 5.14551 17.449V9.74992C5.14551 7.20711 7.20686 5.14575 9.74967 5.14575H17.3469C17.7957 5.14575 18.1594 4.78198 18.1594 4.33325C18.1594 3.88452 17.7957 3.52075 17.3469 3.52075H9.74967Z"
@@ -560,24 +562,42 @@
       <div class="projects__inner">
         <div class="projects__tabs">
           <div class="projects-tab projects-tab--active">
+            <h3 class="projects-tab__title">Відбудова житла для військового Вови</h3>
+            <p class="projects-tab__text">Вова служив в ЗСУ та втратив ногу під час бойових дій на початку
+              повномаштабної війни. Біда прийшла і в його дім - в наслідок влучання російського снаряда, його кузня
+              вщент зруйнована, хліви для худоби знищені, а сама худоба загинула, а житло пошкоджене.<br>
+              Вова та його родина потребує нашої допомоги для відбудови ковальської майстерні та дому, щоб продовжити
+              свою працю на українській землі.</p>
+          </div>
+          <div class="projects-tab">
+            <h3 class="projects-tab__title">Віднолвення Центру соціально-психологічної реабілітації дітей</h3>
+            <p class="projects-tab__text">Центр зазнав руйнувань під час обстрілу російськими окупантами.<br>
+              Найстрашніше, що під час бомбардувань в будівлі без світла, води та опалення знаходилися діти. На щастя,
+              всі залишилися живі, але дитячий будинок потребує відновлення. Наш благодійний фонд допоможе відбудувати
+              його.</p>
+          </div>
+          <div class="projects-tab">
             <h3 class="projects-tab__title">Допомога лікарні</h3>
             <p class="projects-tab__text">Ми працюємо над відновленням Чернігівської дитячої стоматологічної лікарні.
               Наразі
-              вона зруйнована вщент. Матеріально-технічна база зазнала великих втрат. Знищена велика кількість обладнання,
+              вона зруйнована вщент. Матеріально-технічна база зазнала великих втрат. Знищена велика кількість
+              обладнання,
               інструментарію, видаткового матеріалу.</p>
           </div>
           <div class="projects-tab">
             <h3 class="projects-tab__title">Допомога конюшні</h3>
             <p class="projects-tab__text">Ми працюємо над відновленням Чернігівської дитячої стоматологічної лікарні.
               Наразі
-              вона зруйнована вщент. Матеріально-технічна база зазнала великих втрат. Знищена велика кількість обладнання,
+              вона зруйнована вщент. Матеріально-технічна база зазнала великих втрат. Знищена велика кількість
+              обладнання,
               інструментарію, видаткового матеріалу.</p>
           </div>
           <div class="projects-tab">
             <h3 class="projects-tab__title">Інше</h3>
             <p class="projects-tab__text">Ми працюємо над відновленням Чернігівської дитячої стоматологічної лікарні.
               Наразі
-              вона зруйнована вщент. Матеріально-технічна база зазнала великих втрат. Знищена велика кількість обладнання,
+              вона зруйнована вщент. Матеріально-технічна база зазнала великих втрат. Знищена велика кількість
+              обладнання,
               інструментарію, видаткового матеріалу.</p>
           </div>
         </div>
