--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <a href="#" class="menu__item">Звіти</a>
         <a href="#" class="menu__item">Команда</a>
         <a href="#" class="menu__item">Документи</a>
+        <a href="#" class="menu__item--nft">NFT</a>
       </nav>
       <a href="#" class="donate"><span>Допомогти</span><img src="assets/img/donate.svg" alt="Donate"></a>
     </div>
