--- a/nft.html
+++ b/nft.html
@@ -35,6 +35,7 @@
         <a href="#" class="menu__item">Звіти</a>
         <a href="#" class="menu__item">Команда</a>
         <a href="#" class="menu__item">Документи</a>
+        <a href="#" class="menu__item--nft">NFT</a>
       </nav>
       <a href="#" class="donate"><span>Допомогти</span><img src="assets/img/donate.svg" alt="Donate"></a>
     </div>
@@ -49,9 +50,10 @@
       </div>
     </div>
     <div class="container">
-      <div class="nft-item__seo">
-        <h1></h1>
-        <p></p>
+      <div class="nft-item__seo tac">
+        <h1>NFT seo title</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi aut eveniet illo ipsa ipsam libero magnam
+          nihil nulla sequi, sit? Architecto eos explicabo in minima odio perferendis placeat reiciendis vero!</p>
       </div>
       <div class="nft-grid">
         <div class="nft-item">
