--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="keywords" content="asd, asd">
   <meta name="description" content="asd, asd">
 </head>
-<body>
+<body class="home-page">
 
 <header class="header">
   <div class="header__mobile">
@@ -35,7 +35,7 @@
         <a href="#" class="menu__item">Звіти</a>
         <a href="#" class="menu__item">Команда</a>
         <a href="#" class="menu__item">Документи</a>
-        <a href="#" class="menu__item--nft">NFT</a>
+        <a href="#" class="menu__item">NFT</a>
       </nav>
       <a href="#" class="donate"><span>Допомогти</span><img src="assets/img/donate.svg" alt="Donate"></a>
     </div>
